--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-# Project exclude paths
+# Compiled class file
+*.class
+
+# Log file
+*.log
 /out/
+/.idea/
+*.iml
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
